--- a/style.css
+++ b/style.css
@@ -69,8 +69,23 @@ section > a {
     color: blueviolet;
     cursor: pointer;
 }
-@media(max-width:300px){
+@media(max-width:850px){
     .list-link-2 > li{
         display: inline;
+        width: 50%;
+        padding: 1em;
+        margin: 1em auto;
+    }
+}
+@media(max-width:338px){
+    .list-link-2 > li{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 15%;
+    }
+    .icon{
+        width: 35px;
+        height: 35px;
     }
 }
